adding about css

--- a/csforsac/home/templates/home/about_page.html
+++ b/csforsac/home/templates/home/about_page.html
@@ -1,5 +1,4 @@
 {% extends "base.html" %}
-
 {% load static %}
 {% load wagtailcore_tags %}
 
@@ -11,7 +10,7 @@
 
 <main role="main">
 
-    <div class="container" id="about"> TODO: fix top padding
+    <div class="container">
         <div id="about-title">
             <h1>Computer Science in the Greater Sacramento Area</h1>
         </div>
@@ -33,11 +32,18 @@
             </div>
         </div>
 
+        <!-- divider -->
+        <div>
+            <div style="height:20px; overflow:hidden; width: 100%;"></div>
+                <hr class="styled-hr" style="width:100%;">
+            <div style="height:20px; overflow:hidden; width: 100%;"></div>
+        </div>
+        
         <div class="row">   
             <div class="col-sm" id="about-col-content">
               <div id="about-col-header">
                   <!-- <h1>{{ page.col_1_header }}</h1> -->
-                  <h1>Elementary</h1>
+                  <h3>Elementary</h3>
               </div>
               <div id="about-col-body">
                 <!-- <p>{{ page.col_1_body }}</p> -->
@@ -54,7 +60,7 @@
           <div class="col-sm"id="about-col-content">
               <div id="about-col-header">
                   <!-- <h1>{{ page.col_2_header }}</h1> -->
-                  <h1>Middle</h1>
+                  <h3>Middle</h3>
               </div>
               <div id="about-col-body">
                   <!-- <p>{{ page.col_2_body }}</p> -->
@@ -71,7 +77,7 @@
           <div class="col-sm"id="about-col-content">
               <div id="about-col-header">
                   <!-- <h1>{{ page.col_3_header }}</h1> -->
-                  <h1>High</h1>
+                  <h3>High</h3>
               </div>
               <div id="about-col-body">
                   <!-- <p>{{ page.col_3_body }}</p> -->
@@ -86,35 +92,60 @@
                   </div>
           </div>
       </div>
-    </div>
 
-<!-- divider -->
-<div>
-    <div style="height:20px; overflow:hidden; width: 100%;"></div>
-        <hr class="styled-hr" style="width:100%;">
-    <div style="height:20px; overflow:hidden; width: 100%;"></div>
-</div>
-
-<!-- What is Computer Science -->
-<div class="container" id="what-is-cs">
-    <div class="row" id="quote-row">
-        <div class="col-8" id="quote2">
-            <!-- <h3>{{ page.quote2 }}</h3> -->
-            <h3>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod 
-                tempor incididunt ut labore et dolore magna aliqua."
-            </h3>
+        <!-- divider -->
+        <div>
+            <div style="height:20px; overflow:hidden; width: 100%;"></div>
+                <hr class="styled-hr" style="width:100%;">
+            <div style="height:20px; overflow:hidden; width: 100%;"></div>
         </div>
-        <div class="col-4" id="quote1-img">
-            <img class="img-fluid" src="https://picsum.photos/503" alt="Generic placeholder image">
-        </div>
-    </div>
-</div>
 
-<!-- divider -->
-<div>
-    <div style="height:20px; overflow:hidden; width: 100%;"></div>
-        <hr class="styled-hr" style="width:100%;">
-    <div style="height:20px; overflow:hidden; width: 100%;"></div>
-</div>
+        <!-- What is Computer Science -->
+        <div class="container" id="what-is-cs">
+            <div class="row" id="quote-row">
+                <div class="col-8" id="quote2">
+                    <!-- <h3>{{ page.quote2 }}</h3> -->
+                    <h3>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod 
+                        tempor incididunt ut labore et dolore magna aliqua."
+                    </h3>
+                </div>
+                <div class="col-4" id="quote1-img">
+                    <img class="img-fluid" src="https://picsum.photos/503" alt="Generic placeholder image">
+                </div>
+            </div>
+        </div>
+
+        <!-- divider -->
+        <div>
+            <div style="height:20px; overflow:hidden; width: 100%;"></div>
+                <hr class="styled-hr" style="width:100%;">
+            <div style="height:20px; overflow:hidden; width: 100%;"></div>
+        </div>
+
+
+            <div class="container" id="goals">
+                <!-- <h5>{{ page.goalsIntro }}</h5> -->
+                <h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
+                incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis 
+                nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+                </h5>
+                <ol>
+                    <li>goal 1</li>
+                    <!-- <li>{{ page.goal1 }}</li> -->
+                    <li>goal 2</li>
+                    <!-- <li>{{ page.goal2 }}</li> -->
+                    <li>goal 3</li>
+                    <!-- <li>{{ page.goal2 }}</li> -->
+                </ol> 
+            </div>
+
+        <!-- divider -->
+        <div>
+            <div style="height:20px; overflow:hidden; width: 100%;"></div>
+                <hr class="styled-hr" style="width:100%;">
+            <div style="height:20px; overflow:hidden; width: 100%;"></div>
+        </div>
+
+    </div> <!--  end container -->
 
 {% endblock %}
