changed html to use wagtail templating

--- a/csforsac/home/templates/home/about_page.html
+++ b/csforsac/home/templates/home/about_page.html
@@ -15,17 +15,11 @@
             <h1>Computer Science in the Greater Sacramento Area</h1>
         </div>
         <div class="col-lg" id="quote1">
-            <!-- <h3>{{ page.quote1 }}</h3> -->
-            <h3>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod 
-                tempor incididunt ut labore et dolore magna aliqua."
-            </h3>
+            <h3>{{ page.quote1 }}</h3>
         </div>
         <div class="row" id="quote-row">
             <div class="col-8" id="quote2">
-                <!-- <h3>{{ page.quote2 }}</h3> -->
-                <h3>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod 
-                    tempor incididunt ut labore et dolore magna aliqua."
-                </h3>
+                <h3>{{ page.quote2 }}</h3>
             </div>
             <div class="col-4" id="quote2-img">
                 <img class="img-fluid" src="https://picsum.photos/503" alt="Generic placeholder image">
@@ -42,33 +36,21 @@
         <div class="row">   
             <div class="col-sm" id="about-col-content">
               <div id="about-col-header">
-                  <!-- <h1>{{ page.col_1_header }}</h1> -->
-                  <h3>Elementary</h3>
+                  <h3>{{ page.col_1_header }}</h3>
               </div>
               <div id="about-col-body">
-                <!-- <p>{{ page.col_1_body }}</p> -->
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod 
-                    tempor incididunt ut labore et dolore magna aliqua. 
-                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi 
-                    ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit 
-                    in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                <p>{{ page.col_1_body }}</p>
               </div>
               <div id="button">
-                <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+                <p><a class="btn btn-secondary" href="{}" role="button">View Details &raquo;</a></p>
               </div>
           </div>
           <div class="col-sm"id="about-col-content">
               <div id="about-col-header">
-                  <!-- <h1>{{ page.col_2_header }}</h1> -->
-                  <h3>Middle</h3>
+                  <h3>{{ page.col_2_header }}</h3>
               </div>
               <div id="about-col-body">
-                  <!-- <p>{{ page.col_2_body }}</p> -->
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod 
-                        tempor incididunt ut labore et dolore magna aliqua. 
-                        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi 
-                        ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit 
-                        in voluptate velit esse cillum dolore eu fugiat nulla pariatur.y</p>
+                  <p>{{ page.col_2_body }}</p>
               </div>
               <div id="button">
                     <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
@@ -76,16 +58,10 @@
           </div>
           <div class="col-sm"id="about-col-content">
               <div id="about-col-header">
-                  <!-- <h1>{{ page.col_3_header }}</h1> -->
-                  <h3>High</h3>
+                  <h3>{{ page.col_3_header }}</h3>
               </div>
               <div id="about-col-body">
-                  <!-- <p>{{ page.col_3_body }}</p> -->
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod 
-                        tempor incididunt ut labore et dolore magna aliqua. 
-                        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi 
-                        ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit 
-                        in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                  <p>{{ page.col_3_body }}</p>
               </div>
               <div id="button">
                     <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
@@ -104,10 +80,7 @@
         <div class="container" id="what-is-cs">
             <div class="row" id="quote-row">
                 <div class="col-8" id="quote2">
-                    <!-- <h3>{{ page.quote2 }}</h3> -->
-                    <h3>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod 
-                        tempor incididunt ut labore et dolore magna aliqua."
-                    </h3>
+                    <h3>{{ page.quote3 }}</h3>
                 </div>
                 <div class="col-4" id="quote1-img">
                     <img class="img-fluid" src="https://picsum.photos/503" alt="Generic placeholder image">
@@ -124,18 +97,11 @@
 
 
             <div class="container" id="goals">
-                <!-- <h5>{{ page.goalsIntro }}</h5> -->
-                <h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
-                incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis 
-                nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-                </h5>
+                <h5>{{ page.goal_intro }}</h5>
                 <ol>
-                    <li>goal 1</li>
-                    <!-- <li>{{ page.goal1 }}</li> -->
-                    <li>goal 2</li>
-                    <!-- <li>{{ page.goal2 }}</li> -->
-                    <li>goal 3</li>
-                    <!-- <li>{{ page.goal2 }}</li> -->
+                    <li>{{ page.goal1 }}</li>
+                    <li>{{ page.goal2 }}</li>
+                    <li>{{ page.goal2 }}</li>
                 </ol> 
             </div>
 
@@ -145,6 +111,8 @@
                 <hr class="styled-hr" style="width:100%;">
             <div style="height:20px; overflow:hidden; width: 100%;"></div>
         </div>
+
+
 
     </div> <!--  end container -->
 
