--- a/csforsac/blog/templates/blog/blog_listing_page.html
+++ b/csforsac/blog/templates/blog/blog_listing_page.html
@@ -13,30 +13,65 @@
 
     <div class="container"> 
 
-        {% for blog in blogs%}
+        {% for post in posts%}
         {% comment %} {% if forloop.counter == 1 %}
             <h1 >First count! </h1>
         {% endif %} {% endcomment %}
              <div style = "padding: 10px" class="row">
 
                     <div class="col-sm-12 col-md-3">
-                        {% image blog.article_image fill-180x180 as article_image %}
-                        <a href="{{ blog.url }}">
+                        {% image post.article_image fill-180x180 as article_image %}
+                        <a href="{{ blpostog.url }}">
                             <img src="{{ article_image.url }}" alt="{{ article_image.alt }}">
                         </a>
                     </div>
                     
                     <div class="col-sm-12 col-md-9">
-                        <a style="font-size: 30px color" href="{{ blog.url }}">
-                           {{ blog.custom_title }}
+                        <a style="font-size: 30px color" href="{{ post.url }}">
+                           {{ post.custom_title }}
                         </a>
-                        <P> {{ blog.blog_summary }}... </p>
-                        <a href="{{ blog.url }}" class="btn btn-primary mt-4">See Article</a>
+                        <P> {{ post.blog_summary }}... </p>
+                        <a href="{{ post.url }}" class="btn btn-primary mt-4">See Article</a>
                     </div>
 
                 </div>
                <hr>
         {% endfor %}
+
+        {% if posts.paginator.num_pages > 1 %}
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-16">
+                        <div class="pagination">
+
+                            {% if post.has_previous %}
+                                <li class="page-item">
+                                    <a href="?page={{ posts.previous_page_number }}" class="page-link">
+                                        <span>&laquo;</span>
+                                    </a>
+                                </li>
+                            {% endif %}
+                            
+                            {% for page_num in posts.paginator.page_range %}
+                                <li class="page-item {% if page_num == posts.number %} active{% endif %}">
+                                    <a href="?page={{ page_num }}" class="page-link">
+                                    {{ page_num }}
+                                </a>
+                            {% endfor %}
+
+                            {% if post.has_next %}
+                            <li class="page-item">
+                                <a href="?page={{ posts.next_page_number }}" class="page-link">
+                                    <span>&raquo;</span>
+                                </a>
+                            </li>
+                            {% endif %}
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        {%  endif %}
 
     </div>  
 {% endblock %}
