trying to push about page content

--- a/csforsac/home/templates/home/about_page.html
+++ b/csforsac/home/templates/home/about_page.html
@@ -12,7 +12,7 @@
 
     <div class="container">
         <div id="about-title">
-            <h1>Computer Science in the Greater Sacramento Area</h1>
+            <h1>{{ page.main_title }}</h1>
         </div>
         <div class="col-lg" id="quote1">
             <h3>{{ page.quote1 }}</h3>
