--- a/csforsac/home/templates/home/contact_page.html
+++ b/csforsac/home/templates/home/contact_page.html
@@ -11,18 +11,18 @@
 		<div class="carousel-item active">
 			<img class="first-slide" src="https://picsum.photos/800/300" alt="First slide">
 			<div class="container">
-			<div class="carousel-caption text-left">
-			<h1> {{ page.header}}</h1>
-			<p>{{ page.subheader }}</p>
+				<div class="carousel-caption text-left">
+					<h1> {{ page.header}}</h1>
+					<p>{{ page.subheader }}</p>
+				</div>
+			</div>
 		</div>
 	</div>
 </div>
-
-
-</div>
-</div>
-
-
+<!-- todo: fix giant header image -->
+	{% for block in self.body %}
+		{% include_block block %}
+	{% endfor%}
 
 <div class="container text-center">
 
