moved blog on nav menu

--- a/csforsac/csforsac/templates/base.html
+++ b/csforsac/csforsac/templates/base.html
@@ -55,7 +55,6 @@
                       <div class="dropdown-menu " aria-labelledby="navbarDropdown">
                         <a class="dropdown-item hvr-grow" onclick="location.reload()" href="/#test">Map</a>
                         <a class="dropdown-item hvr-grow" href="#">Calendar</a>
-                        <a class="dropdown-item hvr-grow" href="/blog-listing">Blog</a>
                       </div>
                    
                     </li>
@@ -99,6 +98,9 @@
                       <a class="dropdown-item hvr-grow" href="/support">Standards and Framework</a>
                       <a class="dropdown-item hvr-grow" href="/support">Implementation</a>
                   </li>
+                <li class="nav-item">
+        	      	<a class="nav-link hvr-grow" href="/blog-listing">Blog</a>
+      		      </li>
                 <li class="nav-item">
         	      	<a class="nav-link hvr-grow" href="/contact">Contact</a>
       		      </li>
