--- a/csforsac/csforsac/static/css/csforsac.css
+++ b/csforsac/csforsac/static/css/csforsac.css
@@ -1,3 +1,10 @@
+.navbar {
+    -webkit-box-shadow: 0 8px 6px -6px #999;
+    -moz-box-shadow: 0 8px 6px -6px #999;
+    box-shadow: 0 8px 6px -6px #999;
+
+}
+
 body {
 	padding-bottom: 0px !important;
 }
