--- a/csforsac/csforsac/templates/base.html
+++ b/csforsac/csforsac/templates/base.html
@@ -140,7 +140,7 @@
 	<section id="footer">
 		<div class="container">
 			<div class="row text-center text-xs-center text-sm-left text-md-left">
-				<div class="col-xs-12 col-sm-4 col-md-4 wow bounceInUp">
+				<div class="col-xs-12 col-sm-4 col-md-4 ">
 					<h5>Quick links</h5>
 					<ul class="list-unstyled quick-links">
 						<li><a href="javascript:void();"><i class="fa fa-angle-double-right"></i>Home</a></li>
@@ -150,7 +150,7 @@
 						<li><a href="javascript:void();"><i class="fa fa-angle-double-right"></i>Videos</a></li>
 					</ul>
 				</div>
-				<div data-wow-delay="0.1s" class="col-xs-12 col-sm-4 col-md-4 wow bounceInUp">
+				<div data-wow-delay="0.1s" class="col-xs-12 col-sm-4 col-md-4 ">
 					<h5>Quick links</h5>
 					<ul class="list-unstyled quick-links">
 						<li><a href="javascript:void();"><i class="fa fa-angle-double-right"></i>Home</a></li>
@@ -160,7 +160,7 @@
 						<li><a href="javascript:void();"><i class="fa fa-angle-double-right"></i>Videos</a></li>
 					</ul>
 				</div>
-				<div data-wow-delay="0.2s" class="col-xs-12 col-sm-4 col-md-4 wow bounceInUp">
+				<div data-wow-delay="0.2s" class="col-xs-12 col-sm-4 col-md-4">
 					<h5>Quick links</h5>
 					<ul class="list-unstyled quick-links">
 						<li><a href="javascript:void();"><i class="fa fa-angle-double-right"></i>Home</a></li>
