created a new banner block. Recreated support_page and implementation page with stream fields

--- a/csforsac/csforsac/templates/base.html
+++ b/csforsac/csforsac/templates/base.html
@@ -96,7 +96,7 @@
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                       <a class="dropdown-item hvr-grow" href="/support">Teach CS!</a>
                       <a class="dropdown-item hvr-grow" href="/support">Standards and Framework</a>
-                      <a class="dropdown-item hvr-grow" href="/support">Implementation</a>
+                      <a class="dropdown-item hvr-grow" href="/implementation">Implementation</a>
                   </li>
                 <li class="nav-item">
         	      	<a class="nav-link hvr-grow" href="/blog-listing">Blog</a>
