--- a/csforsac/home/templates/home/collaborate_page.html
+++ b/csforsac/home/templates/home/collaborate_page.html
@@ -1,1 +1,29 @@
-collab page
+{% extends "base.html" %}
+
+{% load wagtailimages_tags wagtailcore_tags %}
+
+{% block content %}
+
+    {% for block in page.header_content %}
+        {% include_block block %}
+    {% endfor %} 
+
+    <div class="container"> 
+        {% for block in self.elementary %}
+            {% include_block block %}
+        {% endfor %}
+    </div>
+
+    <div class="container"> 
+        {% for block in self.middle_school %}
+            {% include_block block %}
+        {% endfor %}
+    </div>
+
+    <div class="container"> 
+        {% for block in self.high_school %}
+            {% include_block block %}
+        {% endfor %}
+    </div>
+
+{% endblock %}
