--- a/csforsac/home/templates/home/support_page.html
+++ b/csforsac/home/templates/home/support_page.html
@@ -1,1 +1,17 @@
-support page
+{% extends "base.html" %}
+
+{% load wagtailimages_tags wagtailcore_tags %}
+
+{% block content %}
+
+    {% for block in page.header_content %}
+        {% include_block block %}
+    {% endfor %} 
+
+    <div class="container"> 
+        {% for block in self.body %}
+            {% include_block block %}
+        {% endfor %}
+    </div>
+
+{% endblock %}
