Implemented more ridgid page heirarchy and limited most pages to one instance.

--- a/csforsac/home/templates/home/collaborate_page.html
+++ b/csforsac/home/templates/home/collaborate_page.html
@@ -13,12 +13,13 @@
             {% include_block block %}
         {% endfor %}
     </div>
-
+{% comment %} Anchor here {% endcomment %}
     <div class="container"> 
         {% for block in self.middle_school %}
             {% include_block block %}
         {% endfor %}
     </div>
+{% comment %} Anchor here {% endcomment %}
 
     <div class="container"> 
         {% for block in self.high_school %}
