fixed the wide banner image resizing and added banner stream field to collaborate

--- a/csforsac/csforsac/templates/base.html
+++ b/csforsac/csforsac/templates/base.html
@@ -82,8 +82,8 @@
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                       <a class="dropdown-item hvr-grow" href="/collaborate">Elementary</a>
-                      <a class="dropdown-item hvr-grow" href="/collaborate">Middle School</a>
-                      <a class="dropdown-item hvr-grow" href="/collaborate">High School</a>
+                      <a class="dropdown-item hvr-grow" href="/collaborate#middle_school">Middle School</a>
+                      <a class="dropdown-item hvr-grow" href="/collaborate#high_school">High School</a>
                       <div class="dropdown-divider"></div>
                       <a class="dropdown-item hvr-grow" href="#">Expanded Learning</a>
                     </div>
