updated carousel image resizing

--- a/csforsac/csforsac/templates/streams/banner_wide_image_block.html
+++ b/csforsac/csforsac/templates/streams/banner_wide_image_block.html
@@ -2,9 +2,9 @@
 
 
         
-{% image self.banner.image fill-750x750 as img %}            
+{% image self.banner.image original as img %}            
 
-    <div class="jumbotron" style="background-image: url('{{ img.url }}'); background-size: cover; height: 40vh; background-position: center center"> 
+    <div class="jumbotron" style="background-image: url('{{ img.url }}'); background-size: cover; height: 50vh; background-position: center center"> 
                    
     
         {% if self.banner.title %}
