--- a/csforsac/csforsac/templates/streams/carousel_block.html
+++ b/csforsac/csforsac/templates/streams/carousel_block.html
@@ -12,11 +12,11 @@
 
         {% for carousel_page in self.carousel_pages %}
             
-            {% image carousel_page.image fill-500x500-c75 as img %}
+            {% image carousel_page.image original as img %}
                  <div class="carousel-item{% if forloop.counter == 1 %} active{% endif %}">
                 
-                    <img class="d-block w-100" src="{{ img.url }}" alt="{{ img.alt }}">
-                    <div class="container">
+                    {% comment %} <img class="d-block w-100" src="{{ img.url }}" alt="{{ img.alt }}" style="height: 100%;"> {% endcomment %}
+                    <div class="jumbotron" style="background-image: url('{{ img.url }}'); background-size: cover; height: 53vh; background-position: center center">
                         <div class="carousel-caption text-left">
                             {% if carousel_page.title %}
                                 <h1>{{ carousel_page.title }}</h1>
