created generic streamfield lists in home/models.py to avoid typing the list so many times created centered title block - streamfield minor changes to callaborate_page.html

--- a/csforsac/csforsac/templates/streams/cards_block.html
+++ b/csforsac/csforsac/templates/streams/cards_block.html
@@ -1,7 +1,9 @@
 {% load wagtailimages_tags %}
 
 <div class="container mb-sm-5 mt-sm-5">
-    <h1 class="text-center mb-sm-5">{{ self.title }}</h1>
+    {% if self.title %}
+        <h1 class="text-center mb-sm-5">{{ self.title }}</h1>
+    {% endif %}
     <div class="card-deck">
       
       
