--- a/csforsac/home/templates/home/collaborate_page.html
+++ b/csforsac/home/templates/home/collaborate_page.html
@@ -23,7 +23,7 @@
     </div>
 
     <a id="high_school"></a>
-    <div  class="containfer-fliud" style="background-color:#fff2e6"> 
+    <div  class="jumbotron" style="background-color:#fff2e6"> 
         <div style="height: 4px;"></div>
         {% for block in self.high_school %}
             {% include_block block %}
