--- a/csforsac/csforsac/templates/streams/banner_wide_image_block.html
+++ b/csforsac/csforsac/templates/streams/banner_wide_image_block.html
@@ -1,17 +1,25 @@
 {% load wagtailimages_tags %}
 {% image self.banner.image original as img %}            
 
-    <div class="jumbotron" style="background-image: url('{{ img.url }}'); background-size: cover; height: 50vh; background-position: center center"> 
+    <div class="container-fluid mb-4" style="background-image: url('{{ img.url }}'); 
+    background-size: cover; 
+    height: 50vh; 
+    min-height: 250px;
+    background-position: center center;
+    text-shadow: #444 0 1px 1px;
+    position: relative;"> 
                    
-    
-        {% if self.banner.title %}
-            <h1 class='display-4'> {{ self.banner.title }} </h1>
-        {% endif %}
+        
+        <div class="container" style="position: absolute; 
+                bottom: 0; height: 150px">
+            {% if self.banner.title %}
+                <h1 class='display-4' style="color:white"> {{ self.banner.title }} </h1>
+            {% endif %}
 
-        {% if self.banner.sub_title %}
-            <p>{{ self.banner.sub_title }}</p>
-        {% endif  %}
-
+            {% if self.banner.sub_title %}
+                <p style="color:white; position">{{ self.banner.sub_title }}</p>
+            {% endif  %}
+        </div>
     </div>
 
     
