--- a/csforsac/csforsac/templates/base.html
+++ b/csforsac/csforsac/templates/base.html
@@ -53,8 +53,8 @@
                       </a>
                       
                       <div class="dropdown-menu " aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item hvr-grow" onclick="location.reload()" href="/#test">Map</a>
-                        <a class="dropdown-item hvr-grow" href="#">Calendar</a>
+                        <a class="dropdown-item hvr-grow" href="/events?map">Map</a>
+                        <a class="dropdown-item hvr-grow" href="/events?calendar">Calendar</a>
                         <a class="dropdown-item hvr-grow" href="/blog-listing">Blog</a>
                       </div>
                    
