--- a/csforsac/events/templates/events/event_focus_page.html
+++ b/csforsac/events/templates/events/event_focus_page.html
@@ -11,10 +11,11 @@
 	<h1>{{page.title}}</h1>
 	
 	<div class="container">
-		<p>{{page.description}}</p>
+		{{page.description|richtext}}
+		<p>{{page.address}}</p>
 	</div>
-	
-	
+	<a href="http://maps.google.com/?q={{ page.address }}">Open in Google Maps</a>
+
 </div>
       
 
