--- a/csforsac/events/templates/events/event_listing_page.html
+++ b/csforsac/events/templates/events/event_listing_page.html
@@ -25,20 +25,20 @@
 <div class="container">
 
 	
-	<div style="height: 700px; padding-bottom: 100px" class="row">
-		<div class="col-lg-8 ">
+	<div style="height: 100%; padding-bottom: 100px" class="row event-container">
+		<div class="col-lg-8 container">
 			<div style="padding-bottom: 15px" class="row">
 				<div class="col-4"></div>
 				<div class="col-4 btn-group" role="group" >
 					<button id="map-option" type="button" class="btn  btn-unselected ">Map</button>
-					<button id="calendar-option" type="button" class="btn btn-selected btn-right ">Calendar</button>
+					<button id="calendar-option" type="button" class="btn btn-selected">Calendar</button>
 				</div>
 				<div class="col-4"></div>
 			</div>
 			<div style="height:100%; width:100%;" class="row">
 				<div style="height:100%; width:100%;" class="col-12">
 					<div id="event-calendar" class="event-calendar"></div>
-					<div style="height:100%; width:100%;" id="event-map" class="event-map">   <div id="map"></div>  </div>
+					<div style="height:700px; width:100%;" id="event-map" class="event-map">   <div id="map"></div>  </div>
 				</div>	
 			</div>
 					
@@ -49,7 +49,7 @@
 				<div class="panel-body">
 					<ul class="list-group">
 						{% for event in events %}
-							<li class="list-group-item"><a href="{{event.slug}}">{{event.title}}</a> {{event.start_date}}
+							<li class="list-group-item"><a href="{{event.slug}}">{{event.title}}</a><br> {{event.start_date}}
 							</li>	        
 						{% endfor %}
 												
@@ -89,7 +89,7 @@
 			});
 			// To add the marker to the map, call setMap();
 			var infowindow{{forloop.counter}} = new google.maps.InfoWindow({
-	          content: '<a href="{{event.slug}}" >{{event.title}}</a>'
+	          content: '<a href="{{event.slug}}" >{{event.title}}</a><br>{{event.start_date}}'
 	        });
 			marker{{forloop.counter}}.setMap(map);
 	        marker{{forloop.counter}}.addListener('click', function() {
